<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="add_operation">+</string>
    <string name="sub_operation">-</string>
    <string name="div_operation">/</string>
    <string name="mult_operation">x</string>
    <string name="num_box">Number</string>
    <string name="answer_box">Answer</string>
    <string name="header_box">Calculator</string>
    <string name="clear_button">Clear</string>
    <string name="number_pad_button">Number pad</string>

</resources>