<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outer_space"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/num2"
        android:layout_width="118dp"
        android:layout_height="125dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:hint="@string/num_box"
        android:textColor="@color/seashell"
        android:textColorHint="@color/seashell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/subtraction"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin"
        android:backgroundTint="@color/flame"
        android:gravity="end"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:text="@string/sub_operation"
        android:textSize="@dimen/operation_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <Button
        android:id="@+id/addition"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin"
        android:backgroundTint="@color/flame"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:text="@string/add_operation"
        android:textSize="@dimen/operation_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/multiplication"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/right_margin"
        android:backgroundTint="@color/flame"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:text="@string/mult_operation"
        android:textSize="@dimen/operation_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <Button
        android:id="@+id/division"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/right_margin"
        android:backgroundTint="@color/flame"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:text="@string/div_operation"
        android:textSize="@dimen/operation_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/num1"
        android:layout_width="118dp"
        android:layout_height="125dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:hint="@string/num_box"
        android:textColorHint="@color/seashell"
        android:textColor="@color/seashell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />
</androidx.constraintlayout.widget.ConstraintLayout>